--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/GitHub/Clock/css/main.css">
+    <link rel="stylesheet" href="/Clock/css/main.css">
     <script type="text/javascript" src="script.js" defer></script>
     <title>Clock</title>
 </head>
@@ -18,7 +18,7 @@
             <p id="current-time"><p id="hours"> 13:</p><p id="minutes">14</p><p id="seconds" class="seconds">01</p></p>
         </div>
         <div class="timezone">
-            <p id="time-zone-txt">London</p>
+            <p id="time-zone-txt">Prague</p>
         </div>
     </section>
     <button id='more-btn' class="more-btn"><i class="material-icons">more_horiz</i><i id="arrow" class="material-icons">expand_less</i></button>
@@ -38,7 +38,7 @@
             </div>
             <div class="time-zone-more bottom-row">
                 <p class="more-description">Timezone Continent</p>
-                <p id="time-zone-value" class="more-values">London</p>
+                <p id="time-zone-value" class="more-values">Prague</p>
                 <p id="cont-zone-value" class="more-values">Europe</p>
             </div>
         </div>
